# aerial-classification

./: .gitignore  app.py  pyproject.toml
notebook/: aerial-classification.ipynb  eda_classification.py  eda_detection.py
src/: inference.py
